Fix bleeding

--- a/packages/structures/src/DropdownMenu.css
+++ b/packages/structures/src/DropdownMenu.css
@@ -8,6 +8,7 @@
 
 	@layer base {
 		background-color: var(--✨bg);
+		overflow: auto;
 
 		display: flex;
 		flex-direction: column;
